--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-      fetcher: Flatdoc.github('ghostery/AppNoticeSDK-Android')
+      fetcher: Flatdoc.file('Readme.md')
     });
   </script>
 </head>
