--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     </div>
     <div class='right'>
       <!-- GitHub buttons: see http://ghbtns.com -->
+      <iframe src="http://ghbtns.com/github-btn.html?user=ghostery&amp;type=follow&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20"></iframe>
       <iframe src="http://ghbtns.com/github-btn.html?user=ghostery&amp;repo=AppNoticeSDK-Android&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
   </div>
