--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
   <!-- Initializer -->
   <script>
-    Flatdoc.run({
-      fetcher: Flatdoc.file('Readme.md')
-    });
+Flatdoc.run({
+  fetcher: Flatdoc.github('ghostery/AppNoticeSDK-Android')
+});
   </script>
 </head>
 <body role='flatdoc'>
